# ChangeLog for app-emacs/company-mode
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*company-mode-20070626 (16 Jun 2008)

  16 Jun 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/50company-mode-gentoo.el, +metadata.xml,
  +company-mode-20070626.ebuild:
  Initial import, bug 226031. Ebuild contributed by me.
