@@ -1,5 +1,5 @@
-AUX 50company-mode-gentoo.el 126 RMD160 a2fb631886d3768cedd2e1e2dde6e1a1232b436a SHA1 99baec074f9698e2145182aefe968d6a68d3ae5c SHA256 fe9f4a9dfc22c42c6aa91cc55333936d2df832ab9bc3e7d4355df7bbb88b1fe7
+AUX 50company-mode-gentoo.el 294 RMD160 7631395553eda4909499698f485c05b67dfba9f6 SHA1 72fd4edec7b448711ad3dcdca8db104dd403dde0 SHA256 1d7cca14e9b774d0e8e3a6682edf72fa89789c8b35b683836de4681335b10324
 DIST company-mode-2007-06-26.tar.bz2 12230 RMD160 49424a5acf4639e5bc0efb4a85ba44d2f70ef494 SHA1 9f9e100142104367b8aa7da1268cc892319e3a28 SHA256 545e70229267ef8f5efba12f7c9b239ef1ea2198594874e5fa7e6d47ca1ca878
 EBUILD company-mode-20070626.ebuild 496 RMD160 6dca70c7ea8417cc5f06d2f78765782a52c0f2ff SHA1 9f04c2b570ffbdce01babacaba73fee919f418bb SHA256 f57f0fbbe3ff16e3c01a96f726fa64ef538f1f49f2c441c3cacedac51a951751
-MISC ChangeLog 348 RMD160 a9eaa6e5030d87e9d82c0fffc9877328a9ee7e19 SHA1 0078c93760285fcebee90def449f44f93d27291c SHA256 5320b5e28a5ee2e9773062fdfa9fe204f49fd0cae93d1d6a91b9f563852058dc
+MISC ChangeLog 561 RMD160 a678e26011a77c4211893da397238736ed5283a7 SHA1 3e8df66693dc678941b1dd4a77a4cbf032e18976 SHA256 6f77c4000358c97a556b509a8588ce65a6245572687aa526ff145bbe0c1f3d1c
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
