@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2008; Ulrich Mueller <ulm@gentoo.org>
+  files/50company-mode-gentoo.el:
+  Execute company-install-bundled-completions-rules after company-mode is
+  loaded, as suggested by opfer in bug 226031 comment 5.
+
 *company-mode-20070626 (16 Jun 2008)
 
   16 Jun 2008; Ulrich Mueller <ulm@gentoo.org>
